[package]
name = "mockchain"
version = "0.1.0"
authors = ["John Kugelman <john@kugelman.name>"]
description = "A simple transaction log reader for a coding challenge"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
