[package]
name = "mockchain"
version = "0.1.0"
authors = ["John Kugelman <john@kugelman.name>"]
description = "A simple transaction log reader for a coding challenge"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
csv = "1.1.6"
rust_decimal = "1.23.1"
serde = { version = "1.0.137", features = ["derive"] }
